@@ -409,7 +409,7 @@
                                   <value>${test.level}</value>
                               </property>
                           </systemProperties>
-                          <argLine>-Duser.region=US -Duser.language=en</argLine>
+                          <argLine>-Duser.region=US -Duser.language=en -XX:MaxPermSize=256m</argLine>
                     </configuration>
 
                 </plugin>
